# ai-tts-vibe-openai

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
tests/: conftest.py  test_api.py  test_lifecycle.py  test_unit.py
vibevoice_tts_server/: __main__.py  config.py  formats.py  lifecycle.py  mcp_main.py  mcp_server.py  model.py  server.py  voices.py
