[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vibevoice-tts-server"
version = "0.1.0"
description = "Local OpenAI-compatible TTS API server for Microsoft VibeVoice-7B"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.30",
    "vibevoice @ git+https://github.com/vibevoice-community/VibeVoice.git",
    "transformers>=4.50",
    "torch>=2.5",
    "diffusers>=0.30",
    "soundfile>=0.12",
    "pydub>=0.25",
    "numpy>=1.24",
    "accelerate>=0.30",
    "pydantic-settings>=2.0",
    "python-multipart>=0.0.9",
    "mcp>=1.0",
]

[project.optional-dependencies]
cuda = ["flash-attn>=2.0"]
quant = ["bitsandbytes>=0.43"]
test = ["pytest>=8.0", "pytest-asyncio>=0.24", "httpx>=0.27"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.scripts]
vibevoice-tts-server = "vibevoice_tts_server.__main__:main"
vibevoice-tts-mcp = "vibevoice_tts_server.mcp_main:main"
